--- a/package.json
+++ b/package.json
@@ -51,12 +51,14 @@
     "clsx": "2.1.1",
     "cmdk": "1.1.1",
     "date-fns": "3.6.0",
+    "dotenv": "^17.2.4",
     "embla-carousel-react": "8.6.0",
     "framer-motion": "^11.0.3",
     "html2canvas": "^1.4.1",
     "input-otp": "1.4.2",
     "jspdf": "^2.5.1",
     "lucide-react": "0.487.0",
+    "mongoose": "^9.2.0",
     "motion": "12.23.24",
     "next-themes": "0.4.6",
     "prismjs": "^1.29.0",
